modifies color yellow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1132,7 +1132,7 @@ footer{
     height: 25px;
 }
 .footer-contacts svg:hover{
-    color: #FFF4A3 !important;
+    color: #fff4a3f8 !important;
 }
 .footer-contacts p{
     margin-right: 10px;
